// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should render by default 1`] = `
<div
  className="sc-bdVaJa dfCAjY"
>
  Hello
</div>
`;

exports[`Wrapper should support "flexDirection" 1`] = `
<div
  className="sc-bdVaJa dSHSRf"
>
  Hello
</div>
`;

exports[`Wrapper should support "lgFlexDirection" 1`] = `
<div
  className="sc-bdVaJa dLrJrl"
>
  Hello
</div>
`;
